<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_projection_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kunotomoki61@gmail.com">hermes-22</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>ament_cmake_auto</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>


  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
